@@ -9,6 +9,8 @@ Latest changes might exist on the GitHub repository. Please check: https://githu
 Also the Migration Guide (Japanese) might be informative: http://inter-mediator.info/ja/migration.html.
 
 Ver.5.2 (in development)
+- Handle some operators of conditions ('!=', '>', '>=', '<', '<=') as valid when using FileMaker 
+  Server.
 - [BUG FIX] The definition file editor supports the 'soft-delete' key, and also the field which
   cant contain ether boolean or string value appropriately.
 - [BUG FIX] Fix an error when the value of 'operator' key in 'query' key is '=' in a definition 
